--- a/public/index.html
+++ b/public/index.html
@@ -31,13 +31,13 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="localhost:3000/about.html">OK Coders</a>
+            <a class="navbar-brand" href="http://stormy-falls-1667.herokuapp.com/about.html">OK Coders</a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="localhost:3000/about.html">About Page</a></li>
+              <li class="active"><a href="http://stormy-falls-1667.herokuapp.com/about.html">About Page</a></li>
               <li><a href="#">Link</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
