--- a/public/index.html
+++ b/public/index.html
@@ -37,18 +37,18 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="http://stormy-falls-1667.herokuapp.com/about.html">About Page</a></li>
-              <li><a href="#">Link</a></li>
+              <li class="active"><a href="http://stormy-falls-1667.herokuapp.com/about.html">About Us</a></li>
+              <li><a href="http://www.google.com">Google</a></li>
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Interesting Links<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
+                  <li><a href="http://www.getbootstrap.com">Twitter Bootstrap</a></li>
+                  <li><a href="https://developers.google.com/web/fundamentals/">Web Fundamentals</a></li>
+                  <li><a href="gulpjs.com">Gulp</a></li>
                   <li class="divider"></li>
-                  <li><a href="#">Separated link</a></li>
+                  <li><a href="nodejs.org">Node.js</a></li>
                   <li class="divider"></li>
-                  <li><a href="#">One more separated link</a></li>
+                  <li><a href="expressjs.com">Express Js</a></li>
                 </ul>
               </li>
             </ul>
